- lh-cpp: new template-files for copy-constructor, and idiomatic assignment

--- a/cpp/trunk/after/template/cpp/class.template
+++ b/cpp/trunk/after/template/cpp/class.template
@@ -10,37 +10,37 @@ VimL: let s:clsname = inputdialog("class name ?", Marker_Txt(expand('%:t:r')))
 VimL: call CppDox_set_brief_snippet()
 VimL: call CppDox_ClassWizard(s:clsname)
 VimL:"
-/**@ingroup g¡lh#option#get('dox_group', '<+Group+>')¡
- * ¡g:CppDox_brief_snippet¡
+/**<+lh#cpp#dox#tag('ingroup')+> g¡lh#option#get('dox_group', '<+Group+>')¡
+ * <+g:CppDox_brief_snippet+>
  *
  * <+doc+>
  *
  * <+@invariant+>
  *
  * <p><b>Semantics</b><br>
- ¡g:CppDox_semantics¡
+ <+g:CppDox_semantics+>
  * <+ <li> sem+>
  *
- * @version ¡'$'¡revision$
- * ¡CppDox_author()¡
+ * <+lh#cpp#dox#tag('version')+> ¡'$'¡revision$
+ * <+CppDox_author()+>
  */
 class ¡s:clsname¡
 ¡g:CppDox_inherits¡
 {
 public:
-    /**@name Construction/destruction
+    /**<+lh#cpp#dox#tag('name')+> Construction/destruction
      */
-    //@{
+    //<+lh#cpp#dox#tag('{')+>
     ¡g:CppDox_constructors¡
 
     /**
      * ¡g:CppDox_isVirtualDest¡ Destructor.
      *
      ¡IF(strlen(g:CppDox_isVirtualDest), '', '* @warning this class is not meant to be publicly inherited')¡
-     * @throw Nothing
+     * <+lh#cpp#dox#tag('throw')+> Nothing
      */
     ¡g:CppDox_isVirtualDest¡ ~¡s:clsname¡() ;
-    //@}
+    //<+lh#cpp#dox#tag('}')+>
 
     <+Other public functions+>;
 
