--- a/cpp/trunk/after/template/cpp/copy-constructor.template
+++ b/cpp/trunk/after/template/cpp/copy-constructor.template
@@ -5,7 +5,7 @@ VimL: let s:marker_open  = "<+"
 VimL: let s:marker_close = "+>"
 VimL: let s:reindent     = 1
 VimL: " in case the class name is already known, no need to extract it
-VimL: let s:clsname = empty(s:Args()) ? Cpp_CurrentScope(line("."), "class") : (s:Args()[0])
-/** <+lh#cpp#dox#brief('')+>Copy constructor.
+VimL: let s:clsname = empty(s:Args()) ? lh#cpp#AnalysisLib_Class#CurrentScope(line("."), "class") : (s:Args()[0])
+/** <+lh#dox#brief('')+>Copy constructor.
  */
 <+s:clsname+>(<+s:clsname+> const& <+lh#dev#naming#param("rhs")+>);
