--- a/cpp/trunk/after/template/cpp/copy-and-swap.template
+++ b/cpp/trunk/after/template/cpp/copy-and-swap.template
@@ -7,7 +7,7 @@ VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL: let s:reindent     = 1
 VimL: " in case the class name is already known, no need to extract it
-VimL: let s:clsname = empty(s:Args()) ? Cpp_CurrentScope(line("."), "class") : (s:Args()[0])
+VimL: let s:clsname = empty(s:Args()) ? lh#cpp#AnalysisLib_Class#CurrentScope(line("."), "class") : (s:Args()[0])
 VimL:"
 VimL:"
 VimL: let s:rhs = lh#dev#naming#param("rhs")
