--- a/cpp/trunk/after/template/cpp/singleton.template
+++ b/cpp/trunk/after/template/cpp/singleton.template
@@ -26,7 +26,7 @@ VimL:"
  * <+ <li> sem+>
  *
  * @version ¡'$'¡revision$
- * ¡CppDox_author()¡
+ * <+lh#dox#author()+>
  */
 class ¡s:clsname¡
 ¡g:CppDox_inherits¡
