- mu-template: better (ba)sh templates

--- a/mu-template/trunk/after/template/sh.template
+++ b/mu-template/trunk/after/template/sh.template
@@ -1,9 +1,7 @@
 VimL:" $Id$
 VimL:" ซshป File Template, Luc Hermitte, 02nd Jan 2011
-VimL: let s:value_start = 'ยก'
-VimL: let s:value_start = 'ยก'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-#!/usr/bin/<+ba+>sh
+#!<+system('which bash')+>
 <++>
