--- a/cpp/trunk/after/template/cpp/assignment-operator.template
+++ b/cpp/trunk/after/template/cpp/assignment-operator.template
@@ -8,9 +8,12 @@ VimL: " in case the class name is already known, no need to extract it
 VimL: let s:clsname = empty(s:Args()) ? lh#cpp#AnalysisLib_Class#CurrentScope(line("."), "class") : (s:Args()[0])
 VimL: let s:use_copyandswap = len(s:Args())>=2 ? (s:Args()[0]) : CONFIRM("Use copy-and-swap idiom?", "Yes\nNo", 1)
 MuT: if 1 == s:use_copyandswap
-VimL: call s:Include("copy-and-swap","cpp", s:clsname)
+VimL:   call s:Include("copy-and-swap","cpp", s:clsname)
 MuT: else 
-/** <+lh#dox#brief('')+>Assignment operator.
- */
+VimL:   let s:fn_comments = { }
+VimL:   let s:fn_comments.brief = "Assignment operator"
+VimL:   let s:fn_comments.param = [{"dir": "in", "name": (s:rhs), "text": "source data to be copied." } ]
+VimL:   let s:fn_comments.throw = {"optional": 1}
+VimL:   call s:Include("function-comment", "cpp/internals",s:fn_comments)
 <+s:clsname+>& operator=(<+s:clsname+> const& <+lh#dev#naming#param("rhs")+>);
 MuT: endif
