--- a/cpp/trunk/after/template/cpp/doxygen-function.template
+++ b/cpp/trunk/after/template/cpp/doxygen-function.template
@@ -2,6 +2,7 @@ VimL:" $Id$
 VimL:" C++ Doxygen snippet for functions, Luc Hermitte
 VimL:" Meant to be used through the command :DOX
 VimL:" hint: /** @ingroup, @params, @exceptions, ... */
+VimL:" TODO: rewrite to rely on function-comment.template
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1
