--- a/cpp/trunk/after/template/dox/file.template
+++ b/cpp/trunk/after/template/dox/file.template
@@ -1,5 +1,5 @@
 VimL:" $Id$
-VimL:" dox-file Template, Luc Hermitte
+VimL:" dox/file Template, Luc Hermitte
 VimL:" hint: /** @file ... */
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
@@ -7,11 +7,11 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL:"
-/**@ingroup g¡lh#option#get('dox_group', '<+Projet+>')¡
- * @file    ¡expand('%:t')¡
+/**<+lh#dox#tag("ingroup")+> g¡lh#option#get('dox_group', '<+Projet+>')¡
+ * <+lh#dox#tag("file")+>    ¡expand('%:t')¡
  * <+lh#dox#author()+>
- * @version ¡'$'¡Revision$
- * @since   Version ¡lh#option#get('ProjectVersion', Marker_Txt('1.0'))¡
+ * <+lh#dox#tag("version")+> ¡'$'¡Revision$
+ * <+lh#dox#tag("since")+>   Version ¡lh#option#get('ProjectVersion', Marker_Txt('1.0'))¡
  * ¡'$'¡Id$
  */
 
