- mu-template: cmake/if can surround

--- a/mu-template/trunk/after/template/cmake/if.template
+++ b/mu-template/trunk/after/template/cmake/if.template
@@ -7,5 +7,5 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 IF (<+cond+>)
-    <+code+>
+    ¡s:Surround(1, '<+code+>')¡
 ENDIF(<+cond+>)
