- mu-template: vim/option-protect snippet can surround

--- a/mu-template/trunk/after/template/vim/option-protect.template
+++ b/mu-template/trunk/after/template/vim/option-protect.template
@@ -9,6 +9,7 @@ VimL: let s:marker_close = '+>'
 try
   let <+opt+>_save = &<+opt+>
   let &<+opt+> = <++>
+  ¡s:Surround(1, '<+code+>')¡
 finally
   let &<+opt+> = <+opt+>_save
 endtry
