- lh-cpp: dox-snippets were missing after-placeholder

--- a/cpp/trunk/after/template/dox/tt.template
+++ b/cpp/trunk/after/template/dox/tt.template
@@ -2,4 +2,4 @@ VimL:" $Id$
 VimL:" doxygen <tt/> File Template, Luc Hermitte, 11th Apr 2012
 VimL:" hint: <tt>|</tt>
 VimL: let s:text = s:Surround(1, Marker_Txt())
-<tt><+s:text+></tt>
+<tt><+s:text+></tt><++>
