--- a/cpp/trunk/after/template/dox/em.template
+++ b/cpp/trunk/after/template/dox/em.template
@@ -2,4 +2,4 @@ VimL:" $Id$
 VimL:" doxygen <em/> snippet, Luc Hermitte, 11th Apr 2012
 VimL:" hint: <em>|</em>
 VimL: let s:text = s:Surround(1, Marker_Txt())
-<em><+s:text+></em>
+<em><+s:text+></em><++>
