--- a/cpp/trunk/after/template/dox/html.template
+++ b/cpp/trunk/after/template/dox/html.template
@@ -5,4 +5,4 @@ VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL: let s:text = s:Surround(1, Marker_Txt())
 VimL: let s:tag = s:Surround(2, Marker_Txt("html"))
-<<+s:tag+>><+s:text+></<+s:tag+>>
+<<+s:tag+>><+s:text+></<+s:tag+>><++>
