- lh-cpp: namespace-snippet can expand foo::bar into several namespace declarations

--- a/cpp/trunk/after/template/cpp/namespace.template
+++ b/cpp/trunk/after/template/cpp/namespace.template
@@ -7,11 +7,14 @@ VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL:"
+VimL: let s:ns_join = lh#cpp#option#multiple_namespaces_on_same_line()
 VimL: let s:namespace = lh#option#get('cpp_namespace', Marker_Txt('ns'))
 VimL: let s:namespace = INPUT('Namespace name: ', s:namespace)
-VimL: let s:ns_close  = IF(strlen(s:namespace), s:namespace, 'Anonymous')
-VimL: let s:ns_open   = IF(!strlen(s:namespace), ' // Anonymous namespace', '')
-namespace ¡s:namespace¡¡C_nl_before_curlyB()¡{¡s:ns_open¡
+VimL: let s:namespaces = split(s:namespace, "::")
+VimL: let s:ns_open = s:namespace =~ '^\s*$' ? ["namespace ".C_nl_before_curlyB()."{ // Anonymous namespace"] : map(copy(s:namespaces), '"namespace ".v:val.C_nl_before_curlyB()."{"')
+VimL: let s:ns_close = s:namespace =~ '^\s*$' ? ["} // Anonymous namespace"] : map(copy(s:namespaces), '"}".(s:ns_join ? "" : " // ".v:val." namespace")')
+VimL: let s:ns_join_s = s:ns_join ? " " : "\n"
+<+join(s:ns_open, s:ns_join_s)+>
 ¡s:Surround(1, '<++>')¡
-} // ¡s:ns_close¡ namespace 
+<+join(s:ns_close, s:ns_join_s)+><+s:ns_join ? (" // ".s:namespace . " namespaces") : ""+>
 <++>
