- lh-cpp: new snippet: erase-remove ; new feature; snippet begin-end can work on surrounded text

--- a/cpp/trunk/after/template/cpp/b-e.template
+++ b/cpp/trunk/after/template/cpp/b-e.template
@@ -1,8 +1,8 @@
 VimL:" $Id$
 VimL:" b-e File Template, Luc Hermitte, 30th Jun 2011
-VimL:" hint: <+c+>.begin(), <+c+>.end()
+VimL:" hint: <+container+>.begin(), <+container+>.end()
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-VimL: let s:c = empty(s:Args()) ? Marker_Txt('c') : (s:Args()[0])
-<+s:c+>.begin(), <+s:c+>.end()<++>
-VimL: unlet s:c
+VimL: let s:container = empty(s:Args()) ? s:Surround(1, Marker_Txt('container')): (s:Args()[0])
+<+s:container+>.begin(), <+s:container+>.end()<++>
+VimL: unlet s:container
