- lh-cpp: template-file shall respect lh#dev#naming conventions

--- a/cpp/trunk/after/template/cpp/internals/stream-signature.template
+++ b/cpp/trunk/after/template/cpp/internals/stream-signature.template
@@ -1,3 +1,4 @@
 VimL:" $Id$
 VimL:" «stream-signature» File Template, Luc Hermitte, 04th Jun 2004
-¡s:friend.s:type¡ & operator¡s:op¡(¡s:type.' & '.s:direction¡s, ¡s:const.s:clsname¡ & v)
+VimL: let s:stream_param = lh#dev#naming#param(s:direction."s")
+<+s:friend.s:type+> & operator<+s:op+>(¡s:type.' & '.s:stream_param¡, <+s:const.s:clsname+> & <+lh#dev#naming#param("v")+>)
