- mu-template: internal change: the real ft of a template file is now in b:ft and not in g:ft

--- a/mu-template/trunk/after/template/vim.template
+++ b/mu-template/trunk/after/template/vim.template
@@ -1,5 +1,5 @@
 VimL: " $Id$
-VimL: "«Vim» Template File, Luc Hermitte
+VimL: "Vim Template File, Luc Hermitte
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:marker_open  = '<+'
