--- a/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
@@ -1,5 +1,5 @@
 VimL: " $Id$
-VimL: "«Vim» local-vimrc Template File, Luc Hermitte
+VimL: "Vim local-vimrc Template File, Luc Hermitte
 VimL: let s:location = fnamemodify(s:path, ':r')
 VimL: " Override s:fn computation for local-vimrc case
 VimL: let s:fn = substitute(s:location,'\(\W\|_\)\+', '_', 'g') 
