--- a/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
@@ -3,6 +3,7 @@ VimL: "Vim local-vimrc Template File, Luc Hermitte
 VimL: let s:location = fnamemodify(s:path, ':r')
 VimL: " Override s:fn computation for local-vimrc case
 VimL: let s:fn = substitute(s:location,'\(\W\|_\)\+', '_', 'g') 
+VimL: let s:_prj_kind = s:Param('project_kind', [])
 let s:k_version = <+001+>
 " Always loaded {{{1
 " Buffer-local Definitions {{{1
@@ -17,15 +18,18 @@ let s:cpo_save=&cpo
 set cpo&vim
 " Avoid local reinclusion }}}2
 
-"------------------------------------------------------------------------
-" Local mappings {{{2
+MuT:  if has_key(s:_prj_kind, 'c') || has_key(s:_prj_kind, 'cpp')
+VimL:     call s:Include('vim-rc-local-ccpp', 'internals')
+MuT:  endif
+MuT:  if has_key(s:_prj_kind, 'cmake')
+VimL:     call s:Include('vim-rc-local-cmake', 'internals')
+MuT:  endif
+MuT:  if empty(s:prj_kind)
+VimL:     call s:Include('vim-rc-local-default', 'internals')
+MuT:  endif
 
-inoremap <buffer> <+keybinding+> <+action+>
-
-"------------------------------------------------------------------------
-" Local commands {{{2
-
-command! -b -nargs=<++> <+CommandName+> <+Action+>
+" ======================[ Other commands {{{2
+command! -b -nargs=* LVEcho echo <sid>Echo(<args>)
 
 "=============================================================================
 " Global Definitions {{{1
@@ -38,6 +42,13 @@ if &cp || (exists("g:loaded_¡s:fn¡")
 endif
 let g:loaded_¡s:fn¡ = s:k_version
 " Avoid global reinclusion }}}2
+"------------------------------------------------------------------------
+" ======================[ Misc function {{{2
+" Function: s:Echo(expr) {{{3
+function! s:Echo(expr)
+  return a:expr
+  " return eval(a:expr)
+endfunction
 "------------------------------------------------------------------------
 " Functions {{{2
 " Functions }}}2
