- lh-cpp: fixes in abs-rel wizard: C++11 considerations (no const return), optimizations (copy-elision), support for lh#dev#naming

--- a/cpp/trunk/after/template/cpp/internals/abs-rel-shared.template
+++ b/cpp/trunk/after/template/cpp/internals/abs-rel-shared.template
@@ -9,7 +9,7 @@ VimL: let s:marker_close = '+>'
 VimL:"
 namespace DETAILS
 {
-    ¡s:tmpl_decl¡class ¡s:sharedclsname¡
+    <+s:tmpl_decl+>class <+s:sharedclsname+>
     {
     public:
 	typedef ¡IF(s:istemplate, s:tmpl_type, "<+scalar_type+>")¡ scalar_type;
@@ -21,23 +21,23 @@ namespace DETAILS
 	//@{
 	/** Initialisation constructor.
 	 */
-	¡s:sharedclsname¡(<+parameters+>)¡IF(s:istemplate,"\n<+: +>{<++>}", ";")¡
+	<+s:sharedclsname+>(<+parameters+>)¡IF(s:istemplate,"\n<+: +>{<++>}", ";")¡
 	/** Protected destructor.
 	 */
-	~¡s:sharedclsname¡();
+	~<+s:sharedclsname+>();
 	¡lh#cpp#abs_rel#canonicalortodoxform(s:absclsname, ! s:defaultisenough)¡
 	//@}
 
 	/**@name Operations
 	 */
 	//@{
-	void add(¡s:sharedclsname¡ const& rhs_)¡IF(s:istemplate,"\n{<++>}", ";")¡
-	void dec(¡s:sharedclsname¡ const& rhs_)¡IF(s:istemplate,"\n{<++>}", ";")¡
-	void mult(scalar_type coeff_)¡IF(s:istemplate,"\n{<++>}", ";")¡
-	void div(scalar_type coeff_)¡IF(s:istemplate,"\n{<++>}", ";")¡
+	void add(<+s:sharedclsname+> const& <+s:rhs+>)¡IF(s:istemplate,"\n{<++>}", ";")¡
+	void dec(<+s:sharedclsname+> const& <+s:rhs+>)¡IF(s:istemplate,"\n{<++>}", ";")¡
+	void mult(scalar_type <+s:coeff+>)¡IF(s:istemplate,"\n{<++>}", ";")¡
+	void div(scalar_type <+s:coeff+>)¡IF(s:istemplate,"\n{<++>}", ";")¡
 	static bool isEqual(
-		¡s:sharedclsname¡ const& rhs_,
-		¡s:sharedclsname¡ const& lhs_)¡IF(s:istemplate,"\n{<++>}", ";")¡
+		<+s:sharedclsname+> const& <+s:rhs+>,
+		<+s:sharedclsname+> const& <+s:lhs+>)¡IF(s:istemplate,"\n{<++>}", ";")¡
 	//@}
     private:
 	<+representation+>;
