--- a/cpp/trunk/after/template/cpp/abs-rel.template
+++ b/cpp/trunk/after/template/cpp/abs-rel.template
@@ -9,7 +9,7 @@ VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL: let s:absclsname = inputdialog('Name of the "absolute" class ?')
 VimL: let s:relclsname = inputdialog('Name of the "relative" class ?')
-VimL: let s:sharedclsname = inputdialog('Name of the "shared" class ? (empty=none)', s:absclsname . "Impl_")
+VimL: let s:sharedclsname = inputdialog('Name of the "shared" class ? (empty=none)', s:absclsname . lh#dev#naming#param("Impl"))
 VimL: let s:issharingimpl = ! empty(s:sharedclsname)
 VimL: let s:defaultisenough = CONFIRM( "Are the implicitly generated default constructor, copy-constructor, destructor, and assignement operatror enough?", "&Yes\n&No", 1) == 1
 VimL: let s:istemplate = CONFIRM("Are the classes template ?", "&Yes\n&No", 2) == 1
@@ -20,13 +20,16 @@ VimL: let s:tmpl2_type = Marker_Txt("U")
 VimL: let s:tmpl2_decl = IF(s:istemplate, "template <".Marker_Txt("typename")." ".s:tmpl2_type.">\n", "")
 VimL: let s:tmpl2 = IF(s:istemplate, "<".s:tmpl2_type.">", "")
 VimL: let s:typename = IF(s:istemplate, "typename ", "")
+VimL: let s:lhs = lh#dev#naming#param("lhs")
+VimL: let s:rhs = lh#dev#naming#param("rhs")
+VimL: let s:coeff = lh#dev#naming#param("coeff")
 VimL:"
 VimL:"
-¡s:tmpl_decl¡class ¡s:absclsname¡;
-¡s:tmpl_decl¡class ¡s:relclsname¡;
+<+s:tmpl_decl+>class <+s:absclsname+>;
+<+s:tmpl_decl+>class <+s:relclsname+>;
 VimL: if s:issharingimpl | call s:Include('abs-rel-shared', 'cpp/internals') | endif
 /**
- * ¡g:CppDox_brief_snippet¡
+ * <+lh#dox#brief('')+>
  *
  * <+doc+>
  *
@@ -42,10 +45,10 @@ VimL: if s:issharingimpl | call s:Include('abs-rel-shared', 'cpp/internals') | e
  */
 VimL: let s:super = "DETAILS::".s:sharedclsname.s:tmpl
 VimL: let s:inh = IF(s:issharingimpl, "\n: ".s:super."(".Marker_Txt("params").")", "\n".Marker_Txt(" "))
-¡s:tmpl_decl¡class ¡s:absclsname.IF(s:issharingimpl, " : ".s:super, "")¡
+<+s:tmpl_decl+>class ¡s:absclsname.IF(s:issharingimpl, " : ".s:super, "")¡
 {
 public:
-    friend class ¡s:relclsname¡¡s:tmpl¡;
+    friend class <+s:relclsname+><+s:tmpl+>;
     typedef ¡IF(s:issharingimpl, s:typename.s:super."::scalar_type", "<+scalar_type+>")¡ scalar_type;
 
     /**@name Construction/destruction
@@ -53,28 +56,28 @@ public:
     //@{
     /** Initialisation constructor.
      */
-    ¡s:absclsname¡(<+parameters+>)¡IF(s:istemplate, s:inh."{<++>}", ";")¡
+    <+s:absclsname+>(<+parameters+>)¡IF(s:istemplate, s:inh."{<++>}", ";")¡
     ¡lh#cpp#abs_rel#canonicalortodoxform(s:absclsname, ! s:defaultisenough)¡
     //@}
 
     /**@name Operators
      */
     //@{
-    ¡s:absclsname¡ & operator+=(¡s:relclsname.s:tmpl¡ const& rhs_)¡IF(s:issharingimpl, " { this->add(rhs_); return *this; }", IF(s:istemplate, "<++>", ";"))¡
-    ¡s:absclsname¡ & operator-=(¡s:relclsname.s:tmpl¡ const& rhs_)¡IF(s:issharingimpl, " { this->dec(rhs_); return *this; }", IF(s:istemplate, "<++>", ";"))¡
+    <+s:absclsname+> & operator+=(¡s:relclsname.s:tmpl¡ const& <+s:rhs+>)¡IF(s:issharingimpl, " { this->add(".(s:rhs)."); return *this; }", IF(s:istemplate, "<++>", ";"))¡
+    <+s:absclsname+> & operator-=(¡s:relclsname.s:tmpl¡ const& <+s:rhs+>)¡IF(s:issharingimpl, " { this->dec(".(s:rhs)."); return *this; }", IF(s:istemplate, "<++>", ";"))¡
 
-    static ¡s:super¡ const diff(¡s:absclsname¡ const& lhs_, ¡s:absclsname¡ const& rhs_)
+    static <+s:super+> const diff(<+s:absclsname+> const& <+s:lhs+>, <+s:absclsname+> const& <+s:rhs+>)
     {
-	¡s:super¡ tmp(lhs_);
-	tmp.dec(rhs_);
+	<+s:super+> tmp(<+s:lhs+>);
+	tmp.dec(<+s:rhs+>);
 	return tmp;
     }
-    friend bool operator==(¡s:absclsname¡ const& rhs_, ¡s:absclsname¡ const& lhs_)¡IF(s:issharingimpl, "\n{ return ".s:absclsname."::isEqual(rhs_, lhs_); }", ';')¡
+    friend bool operator==(<+s:absclsname+> const& <+s:rhs+>, <+s:absclsname+> const& <+s:lhs+>)¡IF(s:issharingimpl, "\n{ return ".s:absclsname."::isEqual(".(s:rhs).", ".(s:lhs)."); }", ';')¡
     //@}
 };
 
 /**
- * ¡g:CppDox_brief_snippet¡
+ * <+lh#dox#brief('')+>
  *
  * <+doc+>
  *
@@ -88,10 +91,10 @@ public:
  * @version ¡'$'¡revision$
  * <+lh#dox#author()+>
  */
-¡s:tmpl_decl¡class ¡s:relclsname.IF(s:issharingimpl, " : ".s:super, "")¡
+<+s:tmpl_decl+>class ¡s:relclsname.IF(s:issharingimpl, " : ".s:super, "")¡
 {
 public:
-    friend class ¡s:absclsname¡¡s:tmpl¡;
+    friend class <+s:absclsname+><+s:tmpl+>;
     typedef ¡IF(s:issharingimpl, s:typename.s:super."::scalar_type", "<+scalar_type+>")¡ scalar_type;
 
     /**@name Construction/destruction
@@ -99,92 +102,92 @@ public:
     //@{
     /** Initialisation constructor.
      */
-    ¡s:relclsname¡(<+parameters+>)¡IF(s:istemplate, s:inh."{<++>}", ";")¡
+    <+s:relclsname+>(<+parameters+>)¡IF(s:istemplate, s:inh."{<++>}", ";")¡
     ¡lh#cpp#abs_rel#canonicalortodoxform(s:relclsname, ! s:defaultisenough)¡
     //@}
 
     /**@name Operators
      */
     //@{
-    ¡s:relclsname¡ & operator+=(¡s:relclsname¡ const& rhs_)¡IF(s:issharingimpl, " { this->add(rhs_); return *this; }", ";")¡
-    ¡s:relclsname¡ & operator-=(¡s:relclsname¡ const& rhs_)¡IF(s:issharingimpl, " { this->dec(rhs_); return *this; }", ";")¡
-    ¡s:relclsname¡ & operator*=(scalar_type coeff_)¡IF(s:issharingimpl, "{ this->mult(coeff_); return *this; }", ";")¡
-    ¡s:relclsname¡ & operator/=(scalar_type coeff_)¡IF(s:issharingimpl, "{ this->div(coeff_); return *this; }", ";")¡
+    <+s:relclsname+> & operator+=(<+s:relclsname+> const& <+s:rhs+>)¡IF(s:issharingimpl, " { this->add(".(s:rhs)."); return *this; }", ";")¡
+    <+s:relclsname+> & operator-=(<+s:relclsname+> const& <+s:rhs+>)¡IF(s:issharingimpl, " { this->dec(".(s:rhs)."); return *this; }", ";")¡
+    <+s:relclsname+> & operator*=(scalar_type <+s:coeff+>)¡IF(s:issharingimpl, "{ this->mult(".(s:coeff)."); return *this; }", ";")¡
+    <+s:relclsname+> & operator/=(scalar_type <+s:coeff+>)¡IF(s:issharingimpl, "{ this->div(".(s:coeff)."); return *this; }", ";")¡
 
-    friend bool operator==(¡s:relclsname¡ const& rhs_, ¡s:relclsname¡ const& lhs_)¡IF(s:issharingimpl, "\n{ return ".s:relclsname."::isEqual(rhs_, lhs_); }", ";")¡
+    friend bool operator==(<+s:relclsname+> const& <+s:rhs+>, <+s:relclsname+> const& <+s:lhs+>)¡IF(s:issharingimpl, "\n{ return ".s:relclsname."::isEqual(".(s:rhs).", ".(s:lhs)."); }", ";")¡
 
-    ¡s:tmpl2_decl¡friend ¡s:relclsname.s:tmpl2¡ const operator-(¡s:absclsname.s:tmpl2¡ const& lhs_, ¡s:absclsname.s:tmpl2¡ const& rhs_);
+    <+s:tmpl2_decl+>friend ¡s:relclsname.s:tmpl2¡ const operator-(¡s:absclsname.s:tmpl2¡ const& <+s:lhs+>, ¡s:absclsname.s:tmpl2¡ const& <+s:rhs+>);
     //@}
 
     protected:
-    explicit Dist(¡s:super¡ const& rhs_) : ¡s:super¡(rhs_) {}
+    explicit Dist(<+s:super+> const& <+s:rhs+>) : <+s:super+>(<+s:rhs+>) {}
 };
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator-(
-	¡s:absclsname.s:tmpl¡ const& lhs_,
-	¡s:absclsname.s:tmpl¡ const& rhs_)
-{ return ¡s:relclsname.s:tmpl¡(¡s:absclsname.s:tmpl¡::diff(lhs_, rhs_)); }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator-(
+	¡s:absclsname.s:tmpl¡ const& <+s:lhs+>,
+	¡s:absclsname.s:tmpl¡ const& <+s:rhs+>)
+{ return ¡s:relclsname.s:tmpl¡(¡s:absclsname.s:tmpl¡::diff(<+s:lhs+>, <+s:rhs+>)); }
 
-¡s:tmpl_decl¡inline
-¡s:absclsname.s:tmpl¡ const operator+(
-	¡s:absclsname.s:tmpl¡ const& lhs_,
-	¡s:relclsname.s:tmpl¡ const& rhs_) 
-{ return ¡s:absclsname.s:tmpl¡(lhs_) += rhs_; }
+<+s:tmpl_decl+>inline
+¡s:absclsname.s:tmpl¡ operator+(
+	¡s:absclsname.s:tmpl¡        <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡ const& <+s:rhs+>) 
+{ return <+s:lhs+> += <+s:rhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:absclsname.s:tmpl¡ const operator+(
-	¡s:relclsname.s:tmpl¡ const& lhs_,
-	¡s:absclsname.s:tmpl¡ const& rhs_)
-{ return ¡s:absclsname.s:tmpl¡(rhs_) += lhs_; }
+<+s:tmpl_decl+>inline
+¡s:absclsname.s:tmpl¡ operator+(
+	¡s:relclsname.s:tmpl¡ const& <+s:lhs+>,
+	¡s:absclsname.s:tmpl¡        <+s:rhs+>)
+{ return <+s:rhs+> += <+s:lhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:absclsname.s:tmpl¡ const operator-(
-	¡s:absclsname.s:tmpl¡ const& lhs_,
-	¡s:relclsname.s:tmpl¡ const& rhs_)
-{ return ¡s:absclsname.s:tmpl¡(lhs_) -= rhs_; }
+<+s:tmpl_decl+>inline
+¡s:absclsname.s:tmpl¡ operator-(
+	¡s:absclsname.s:tmpl¡        <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡ const& <+s:rhs+>)
+{ return <+s:lhs+> -= <+s:rhs+>; }
 
 #if 0
 // Makes no sense
-¡s:tmpl_decl¡inline
+<+s:tmpl_decl+>inline
 ¡s:absclsname.s:tmpl¡ const operator-(
-	¡s:relclsname.s:tmpl¡ const& lhs_,
-	¡s:absclsname.s:tmpl¡ const& rhs_);
+	¡s:relclsname.s:tmpl¡ const& <+s:lhs+>,
+	¡s:absclsname.s:tmpl¡ const& <+s:rhs+>);
 #endif
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator+(
-	¡s:relclsname.s:tmpl¡ const& lhs_,
-	¡s:relclsname.s:tmpl¡ const& rhs_) 
-{ return ¡s:relclsname.s:tmpl¡(lhs_) += rhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator+(
+	¡s:relclsname.s:tmpl¡        <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡ const& <+s:rhs+>) 
+{ return <+s:lhs+> += <+s:rhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator-(
-	¡s:relclsname.s:tmpl¡ const& lhs_,
-	¡s:relclsname.s:tmpl¡ const& rhs_)
-{ return ¡s:relclsname.s:tmpl¡(lhs_) -= rhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator-(
+	¡s:relclsname.s:tmpl¡        <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡ const& <+s:rhs+>)
+{ return <+s:lhs+> -= <+s:rhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator*(
-	¡s:relclsname.s:tmpl¡       const& lhs_,
-	¡s:typename.s:relclsname.s:tmpl¡::scalar_type rhs_) 
-{ return ¡s:relclsname.s:tmpl¡(lhs_) *= rhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator*(
+	¡s:relclsname.s:tmpl¡              <+s:lhs+>,
+	¡s:typename.s:relclsname.s:tmpl¡::scalar_type <+s:rhs+>) 
+{ return <+s:lhs+> *= <+s:rhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator*(
-	¡s:typename.s:relclsname.s:tmpl¡::scalar_type lhs_,
-	¡s:relclsname.s:tmpl¡       const& rhs_)
-{ return ¡s:relclsname.s:tmpl¡(rhs_) *= lhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator*(
+	¡s:typename.s:relclsname.s:tmpl¡::scalar_type <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡              <+s:rhs+>)
+{ return <+s:rhs+> *= <+s:lhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator/(
-	¡s:relclsname.s:tmpl¡       const& lhs_,
-	¡s:typename.s:relclsname.s:tmpl¡::scalar_type rhs_) 
-{ return ¡s:relclsname.s:tmpl¡(lhs_) /= rhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator/(
+	¡s:relclsname.s:tmpl¡              <+s:lhs+>,
+	¡s:typename.s:relclsname.s:tmpl¡::scalar_type <+s:rhs+>) 
+{ return <+s:lhs+> /= <+s:rhs+>; }
 
-¡s:tmpl_decl¡inline
-¡s:relclsname.s:tmpl¡ const operator/(
-	¡s:typename.s:relclsname.s:tmpl¡::scalar_type lhs_,
-	¡s:relclsname.s:tmpl¡       const& rhs_)
-{ return ¡s:relclsname.s:tmpl¡(rhs_) /= lhs_; }
+<+s:tmpl_decl+>inline
+¡s:relclsname.s:tmpl¡ operator/(
+	¡s:typename.s:relclsname.s:tmpl¡::scalar_type <+s:lhs+>,
+	¡s:relclsname.s:tmpl¡              <+s:rhs+>)
+{ return <+s:rhs+> /= <+s:lhs+>; }
 
